main.css
body {
  margin: 0;
  font-family: Lato, Helvetica, sans-serif;
  color: #333447;
  line-height: 1.5;
}

#logger {
  overflow: scroll;
  height: 30vh;
  width: 100%;
  background: -webkit-linear-gradient(#ff00a6, #ffd205);
}

#logger p {
  margin: 16px;
  font-size: 20px;
  display: inline-block;
}

#logger p span {
  font-size: 12px;
  padding-left: 8px;
}

#logger p:last-child span {
  top: 10px;
}

#logger p:last-child {
  font-size: 55px;
}

.sum {
  border-bottom: 2px solid #333447;
}

.main {
  position: relative;
  padding-top: 16px;
  background: url("background_sm.svg") no-repeat 80% 70%;
  height: 70vh;
  overflow: scroll;
}

.flex {
  justify-content: space-between;
  display: flex;
  padding: 0 16px;
}

.gradient-text {
  font-size: 24px;
  background: -webkit-linear-gradient(#ff00a6, #ffd205);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.roll-input {
  padding: 1px 5px 2px 5px;
  background: -webkit-linear-gradient(#ff00a6, #ffd205);
  border: none;
  border-radius: 20px;
  height: 75px;
  width: 75px;
  font-size: 44px;
  text-align: center;
}

@media screen and (min-width: 768px) {
  .main {
    background: url("background_lg.svg") no-repeat center;
  }

  .flex {
    justify-content: space-around;
  }

  .center-screen {
    position: absolute;
    transform: translate(-50%);
    left: 50%;
    top: 29%;
  }
}

/*Utility Classes*/

.position-relative {
  position: relative;
}

.background-color-black {
  background-color: #000a33;
}

.text-center {
  text-align: center;
}
.m-b-0 {
  margin-bottom: 0;
}

.show-for-screen-reader {
  position: absolute !important;
  width: 1px;
  height: 1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

